virtualservices/api-example-com-delegation-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs
  namespace: gloo-system
  labels:
    app: httpbin
spec:
  virtualHost:
    domains:
    - 'api.example.com'
    routes:
    - matchers:
      - prefix: /httpbin/
      delegateAction:
        ref:
          name: test-routes
          namespace: gloo-system
