virtualservices/api-example-com-vs-extauth-rl-tls.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs-tls
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - 'api.example.com'
    routes:
    - matchers:
      - prefix: /httpbin/
      routeAction:
        single:
          upstream:
            name: default-httpbin-8000
            namespace: gloo-system 
      options:
        prefixRewrite: /
    options:
      # Configures ExtAuth on our routes
      extauth:
        configRef:
          name: apikey-auth
          namespace: gloo-system
      rateLimitConfigs:
        refs:
        - name: apikey-limit
          namespace: gloo-system
      waf:
        customInterventionMessage: 'ModSecurity intervention! Custom message details here..'
        ruleSets:
        - ruleStr: |
            # Turn rule engine on
            SecRuleEngine On
            SecRule REQUEST_HEADERS:JMeter-Agent "scammer" "deny,status:418,id:107,phase:1,msg:'blocked scammer'"
