virtualservices/api-example-com-vs-upstream-group.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs
  namespace: gloo-system
  labels:
    app: httpbin
spec:
  virtualHost:
    domains:
    - 'api.example.com'
    routes:
    - matchers:
      - prefix: /httpbin/
      routeAction:
        upstreamGroup:
          name: httpbin-group
          namespace: gloo-system
      options:
        prefixRewrite: /
