virtualservices/gloofed-example-com-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: gloofed-example-com-vs
  namespace: gloo-system
  labels:
    app: gloofed
spec:
  virtualHost:
    domains:
    - 'gloofed.example.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: gloo-system-gloo-fed-console-8090
            namespace: gloo-system
